--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -3,23 +3,23 @@
 
     <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px" *ngIf="type == 'student'">     
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Nome do Aluno" readonly value="Nome do Aluno">
+        <input type="text" matInput placeholder="Nome do Aluno" readonly value="{{student.name}}">
       </mat-form-field>
 
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Série do Aluno" readonly value="Série do Aluno">
+        <input type="text" matInput placeholder="Série do Aluno" readonly value="{{student.grade}}">
       </mat-form-field>
 
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Turma do Aluno" readonly value="Turma do Aluno">
+        <input type="text" matInput placeholder="Turma do Aluno" readonly value="{{student.class}}">
       </mat-form-field>
 
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Telefone do Aluno" readonly value="Telefone do Aluno">
+        <input type="text" matInput placeholder="Telefone do Aluno" readonly value="{{student.phone}}">
       </mat-form-field>
 
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Email do Aluno" readonly value="Email do Aluno">
+        <input type="text" matInput placeholder="Email do Aluno" readonly value="{{student.email}}">
       </mat-form-field>
    
       <div fxLayout="row" fxLayoutGap="15px">
@@ -33,23 +33,23 @@
       <mat-card-title>Informações do Professor</mat-card-title>
 
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Nome do Professor" readonly value="Nome do Professor">
+        <input type="text" matInput placeholder="Nome do Professor" readonly value="{{teacher.name}}">
       </mat-form-field>
 
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Matéria do Professor" readonly value="Matéria do Professor">
+        <input type="text" matInput placeholder="Matéria do Professor" readonly value="{{teacher.role}}">
       </mat-form-field>
 
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Emprego do Professor" readonly value="Efetivo">
+        <input type="text" matInput placeholder="Emprego do Professor" readonly value="{{teacher.effective}}">
       </mat-form-field>
 
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Telefone do Professor" readonly value="Telefone do Professor">
+        <input type="text" matInput placeholder="Telefone do Professor" readonly value="{{teacher.phone}}">
       </mat-form-field>
 
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Email do Professor" readonly value="Email do Professor">
+        <input type="text" matInput placeholder="Email do Professor" readonly value="{{teacher.email}}">
       </mat-form-field>
 
       <button mat-raised-button color="primary" class="bp-btn" [disabled]="1 == 1">Editar Professor</button>
@@ -60,19 +60,19 @@
       <mat-card-title>Informações do Servidor</mat-card-title>
 
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Nome do Servidor" readonly value="Nome do Servidor">
+        <input type="text" matInput placeholder="Nome do Servidor" readonly value="{{staff.name}}">
       </mat-form-field>
 
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Função do Servidor" readonly value="Função do Servidor">
+        <input type="text" matInput placeholder="Função do Servidor" readonly value="{{staff.role}}">
       </mat-form-field>
 
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Telefone do Servidor" readonly value="Telefone do Servidor">
+        <input type="text" matInput placeholder="Telefone do Servidor" readonly value="{{staff.phone}}">
       </mat-form-field>
 
       <mat-form-field class="v-input">
-        <input type="text" matInput placeholder="Email do Servidor" readonly value="Email do Servidor">
+        <input type="text" matInput placeholder="Email do Servidor" readonly value="{{staff.email}}">
       </mat-form-field>
 
       <div fxLayout="row" fxLayoutGap="15px">
